--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,7 @@ comments:
     num_posts: # 5 (default)
     colorscheme: # "light" (default), "dark"
   utterances:
+    repo: owner/repo
     theme: 'github-light' # "github-light" (default), "github-dark"
     # issue_term: 'pathname' # "pathname" (default)
   giscus:
